# that-limit

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.envoy.yml  docker-compose.http.yml  justfile
crates/cache/: Cargo.toml
crates/cache/src/: action.rs  config.rs  lib.rs  model.rs
crates/core/: Cargo.toml
crates/core/src/: bucket.rs  cache.rs  config.rs  integration.rs  lib.rs  store.rs
crates/core/tests/fixtures/: invalid_type.json  valid.json
crates/envoy-adapter/: Cargo.toml
crates/envoy-adapter/src/: app.rs  lib.rs  store.rs
crates/http-adapter/: Cargo.toml
crates/http-adapter/src/: app.rs  extractor.rs  lib.rs  middleware.rs  state.rs  store.rs
crates/ratelimit-headers/: Cargo.toml
crates/ratelimit-headers/src/: headers.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: cache.rs  config.rs  lib.rs  logger.rs  store.rs
env/: .env
k8s/: deployment.yaml  service.yaml
k8s/envoy/: 00-namespace.yaml  01-redis.yaml  02-that-limit.yaml  03-emissary.yaml  envoy.yaml  redis.yaml  that-limit.yaml
k8s/http/: 00-namespace.yaml  01-redis.yaml  03-that-limit.yaml  deployment.yaml  load-balancer.yaml  redis.yaml  that-limit.yaml
src/: bootstrap.rs  bucket.rs  cfg.rs  error.rs  handlers.rs  integration.rs  main.rs  middleware.rs  state.rs  store.rs
src/core/: bucket.rs  cfg.rs  integration.rs  mod.rs  store.rs
src/grpc/: bootstrap.rs  mod.rs  store.rs
src/http/: bootstrap.rs  middleware.rs  mod.rs  state.rs  store.rs
static/: config.json
tests/fixtures/: invalid_type.json  valid.json
tests/performance/: protected.js  protected.lua
