[workspace]
members = [
    "crates/core",
    "crates/cache",
    "crates/ratelimit-headers",
    "crates/envoy-adapter",
    "crates/http-adapter",
    "crates/server",
    "crates/test-utils"
]

resolver = "2"

[workspace.dependencies]
log = "0.4.29"
thiserror = "2.0.18"
simplelog = "0.12.2"

tokio = { version = "1.49.0", default-features = false }
redis = { version = "1.0.3", default-features = false }
testcontainers-modules = { version = "0.14.0", default-features = false }
