[workspace]
members = [
    "crates/core",
    "crates/cache",
    "crates/envoy-adapter",
    "crates/http-adapter",
    "crates/server",
    "crates/test-utils"
]

resolver = "2"

[workspace.dependencies]
log = "0.4.29"
thiserror = "2.0.18"
simplelog = "0.12.2"

tokio = { version = "1.50.0", default-features = false }
redis = { version = "1.1.0", default-features = false }
tower = { version = "0.5.3", default-features = false }
testcontainers-modules = { version = "0.15.0", default-features = false }
