[package]
name = "that-limit-envoy-adapter"
version = "0.1.0"
edition = "2024"

[dependencies]
that-limit-core = { path = "../core" }
that-limit-ratelimit-headers = { path = "../ratelimit-headers" }

log = { workspace = true }
thiserror = { workspace = true }

tonic = "0.14.4"
envoy-types = "0.7.2"

[dev-dependencies]
tokio = { workspace = true }
tokio-stream = "0.1.18"
hyper-util = "0.1.20"
tower = "0.5.3"
that-limit-test-utils = { path = "../test-utils" }
