[package]
name = "that-limit-envoy-adapter"
version = "0.2.0"
edition = "2024"

[dependencies]
that-limit-core = { path = "../core" }

log = { workspace = true }
thiserror = { workspace = true }

tonic = "0.14.5"
envoy-types = "0.7.2"

[dev-dependencies]
tokio = { workspace = true }
tower = { workspace = true }
tokio-stream = "0.1.18"
hyper-util = "0.1.20"
that-limit-test-utils = { path = "../test-utils" }
