[package]
name = "that-limit-http-adapter"
version = "0.2.0"
edition = "2024"

[dependencies]
that-limit-core = { path = "../core" }

log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }

axum = "0.8.8"

[dev-dependencies]
testcontainers-modules = { workspace = true, features = ["redis"] }
that-limit-test-utils = { path = "../test-utils" }
