[package]
name = "that-limit-test-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
that-limit-core = { path = "../core" }
that-limit-cache = { path = "../cache" }

log = { workspace = true }
simplelog = { workspace = true }

tokio = { workspace = true }

redis = "1.0.3"
testcontainers-modules = { workspace = true, features = ["redis"] }
