[package]
name = "that-limit-test-utils"
version = "0.2.0"
edition = "2024"

[dependencies]
that-limit-core = { path = "../core" }
that-limit-cache = { path = "../cache" }

log = { workspace = true }
simplelog = { workspace = true }

tokio = { workspace = true }
redis = { workspace = true }

testcontainers-modules = { workspace = true, features = ["redis"] }
